day-03-integration/module-05-kafka-streams-ksqldb/edge-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: banking-ksqldb-lab
  namespace: msellamitn-dev
spec:
  host: banking-ksqldb-lab-msellamitn-dev.apps.rm3.7wse.p1.openshiftapps.com
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: banking-ksqldb-lab
  port:
    targetPort: 8080
