day-03-integration/module-05-kafka-streams-ksqldb/ksqldb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksqldb
  namespace: msellamitn-dev
  labels:
    app: ksqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ksqldb
  template:
    metadata:
      labels:
        app: ksqldb
    spec:
      containers:
      - name: ksqldb-server
        image: confluentinc/ksqldb-server:0.29.0
        ports:
        - containerPort: 8088
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
        volumeMounts:
        - name: ksqldb-etc
          mountPath: /etc/ksqldb
        - name: ksql-config
          mountPath: /tmp/ksql
        - name: logs
          mountPath: /usr/logs
        livenessProbe:
          httpGet:
            path: /info
            port: 8088
          initialDelaySeconds: 60
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /info
            port: 8088
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
      volumes:
      - name: ksqldb-etc
        emptyDir: {}
      - name: ksql-config
        emptyDir: {}
      - name: logs
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: ksqldb
  namespace: msellamitn-dev
spec:
  selector:
    app: ksqldb
  ports:
  - name: http
    port: 8088
    targetPort: 8088
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ksqldb
  namespace: msellamitn-dev
spec:
  to:
    kind: Service
    name: ksqldb
  port:
    targetPort: 8088
